GNOME Bugzilla – Bug 685207
connecting to enterprise wpa from the ap list doesn't work
Last modified: 2012-10-02 13:00:09 UTC
I have an enterprise wpa ap in range. Clicking on it from the shell network menu brings up the humongous dialog, as expected. But clicking on it in the ap list in the network panel does nothing. It does print 'activate ssid!', so at least it gets that far.
This might be the same as bug 684821
Created attachment 225582 [details] [review] network: Fix WPA Enterprise connection not working
Attachment 225582 [details] pushed as 75086eb - network: Fix WPA Enterprise connection not working