network: Fix WPA Enterprise connection not working

https://bugzilla.gnome.org/show_bug.cgi?id=685207